<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.robotapp.Settings" >


    <View
        android:id="@+id/topbar"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/feedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BTupdateSpeedText"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/findNewDevices"
        android:layout_marginBottom="24dp"
        android:onClick="switchToFeed"
        android:text="@string/go_to_feed" />

    <Button
        android:id="@+id/findNewDevices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/feedButton"
        android:onClick="checForAvailableBLEDevices"
        android:text="@string/find_new_devices" />

    <EditText
        android:id="@+id/cameraIPText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view1"
        android:layout_alignRight="@+id/findNewDevices"
        android:layout_below="@+id/view1"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cameraIPText"
        android:layout_below="@+id/view1"
        android:layout_marginTop="26dp"
        android:text="@string/camera_feed_ip_address"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/BTupdateSpeedText"
        android:layout_alignLeft="@+id/BTupdateSpeedText"
        android:text="@string/update_speed"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/BTupdateSpeedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView6"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="number"
        android:text="@string/default_bt_update_speed" />

        <View
        android:id="@+id/topbar2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textView6"
        android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/cameraIPText"
            android:layout_below="@+id/cameraIPText"
            android:layout_marginTop="28dp"
            android:text="@string/video_spinner_msg"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <CheckBox
            android:id="@+id/isCameraEnabledCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/topbar"
            android:layout_alignTop="@+id/cameraIPText"
            android:text="@string/use_camera_" />

        <Spinner
            android:id="@+id/feedSizeSpinner"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/topbar2"
            android:layout_centerHorizontal="true" />
    
</RelativeLayout>